Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -14,8 +14,11 @@ img {
   margin-right: auto;
 }
 
-nav a {
+nav {
   text-align: center;
+}
+
+nav a {
   padding-left: 10px;
   padding-right: 10px;
 }
