--- a/style.css
+++ b/style.css
@@ -21,5 +21,5 @@ nav {
 nav a {
   padding-left: 10px;
   padding-right: 10px;
-  background-color: rbg(50, 50, 50);
+  background-color: #555555;
 }
