--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ figcaption {
   font-size: 10px;
 }
 
+#featured-property {
+  margin-right: auto;
+  margin-left: auto;
+}
+
 #featured-property p {
   width: 800px;
   text-align: center;
