--- a/style.css
+++ b/style.css
@@ -29,12 +29,14 @@ figcaption {
   font-size: 10px;
 }
 
-#featured-property {
+/*#featured-property {
   margin-right: auto;
   margin-left: auto;
-}
+}*/
 
 #featured-property p {
   width: 800px;
   text-align: center;
+  margin-right: auto;
+  margin-left: auto;
 }
