Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -38,9 +38,11 @@ figcaption {
 
 #details {
   display: block;
+  width: auto;
 }
 
 #details div {
   float: left;
   background-color: #999999;
+
 }
