--- a/style.css
+++ b/style.css
@@ -43,5 +43,6 @@ figcaption {
 #details div {
   float: left;
   background-color: #999999;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
