--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ figcaption {
 #details div {
   float: left;
   background-color: #999999;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
 }
