--- a/style.css
+++ b/style.css
@@ -44,6 +44,5 @@ figcaption {
   float: left;
   background-color: #999999;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  width: 25%;
 }
